Updated to newest possible versions